GREEN-specs work (butrequire API access).

--- a/app/views/passages/show.html.haml
+++ b/app/views/passages/show.html.haml
@@ -1,5 +1,5 @@
 #passages.scripture
-	-@passages.each do |passage|
+	-@passages.collection.each do |passage|
 		%h2.reference= passage["display"]
 		=raw passage.text
 		=chapter_link_from_verse_id(passage.start_verse_id)
