--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -22,6 +22,11 @@ h3 {font-size: em(20);}
 h4 {font-size: em(18);}
 h5 {font-size: em(17);}
 
+hr {
+    border: none;
+    border-top: solid 1px $lightgray;
+}
+
 .scripture {
     font-size: 1.1em;
     line-height: 1.8;
