Separates fonts and icon font sheets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 @import "vendor/normalize",
         "vendor/responsive-nav",
         "partials/fonts",
+        "partials/icon-fonts",
         "partials/dropdown",
         "partials/typography";
 
