Adds Footnotes partial sheet

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
         "partials/fonts",
         "partials/icon-fonts",
         "partials/dropdown",
+        "partials/footnotes",
         "partials/typography";
 
 @import "main";
