--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -8,5 +8,5 @@ $lightgray2: #d7d7d7;
 $btnshadow:0 1px 1px hsla(0,0,0,0.2);
 
 //Type
-$scripture-font:"ff-meta-serif-web-pro",serif;
-$ui-font:"proxima-nova",sans-serif;
+$scripture-font: "Charis SIL",serif;
+$ui-font: "Montserrat",sans-serif;
