Global block margin variable

--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -10,3 +10,6 @@ $btnshadow:0 1px 1px hsla(0,0,0,0.2);
 //Type
 $scripture-font: "Charis SIL",serif;
 $ui-font: "Montserrat",sans-serif;
+
+// Layout
+$block-margin: 1.5em 0 0 0;
