--- a/app/assets/stylesheets/partials/_footnotes.scss
+++ b/app/assets/stylesheets/partials/_footnotes.scss
@@ -1,5 +1,5 @@
 .crossreferences, .footnotes {
-  margin-top: $block-margin;
+  margin: $block-margin;
   border-top: solid 1px $lightgray;
   padding-top: em(20);
   padding-left: 0;
@@ -17,6 +17,18 @@
   color: $black;
 }
 
+// Animate the target click
 .note:target {
-  text-decoration: underline;
+  border-bottom-color: $blue;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  -webkit-animation: target-fade 1.5s 1;
+}
+@-webkit-keyframes target-fade {
+    0% { border-color: rgba($blue,0);}
+    100% { border-color: rgba($blue,1);}
+}
+@-webkit-keyframes target-fade-dark {
+    0% { border-color: rgba($blue,0);}
+    100% { border-color: rgba($blue,1);}
 }
