--- a/app/assets/stylesheets/sections/chapters.scss
+++ b/app/assets/stylesheets/sections/chapters.scss
@@ -21,7 +21,7 @@ header.info {
 
 .nav.top {
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     right: 0;
     a:first-child {
         margin-right: 20px
