corrected typo [ci skip

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -4,4 +4,4 @@
 
 	Complete source code for this application can be found [on Github](https://github.com/americanbible/biblesearch-client).
 
-	Interested in developing site like this or embeding the Bible on your website? See the [Bible Search Tools Site](http://tools.bibles.org) for more information.
+	Interested in developing site like this or embedding the Bible on your website? See the [Bible Search Tools Site](http://tools.bibles.org) for more information.
